Added endpoint for canonical
